methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:7: error: not found: value doite
      doite()
      ^